<?xml version="1.0"?>
<package format="2">
  <name>diff_car</name>
  <version>0.0.0</version>
  <description>The diff_car package</description>
  <maintainer email="zhanzhihao_dt@163.com">zhan</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>gazebo_plugins</depend>
</package>
