<?xml version="1.0"?>
<package format="2">
  <name>joy_ctrl</name>
  <version>0.0.0</version>
  <description>The joy_ctrl package</description>
  <maintainer email="zhan@todo.todo">zhan</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
</package>
