<?xml version="1.0"?>
<package format="2">
  <name>teleop_twist_keyboard_cpp</name>
  <version>0.0.0</version>
  <description>The teleop_twist_keyboard_cpp package</description>
  <maintainer email="zhanzhihao_dt@163.com">zhan</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
</package>
